# lars-logger

./: .gitignore  README.md  pyproject.toml
apps/cli/: main.py
interfaces/: config_protocol.py
models/: logger.py  logger_config.py
services/: logger_service.py
src/: __init__.py
src/lars_logger/: __init__.py
src/lars_logger/models/: logger.py  logger_config.py
src/lars_logger/services/: file_service.py  path_service.py
src/models/: logger.py  logger_config.py
src/services/: file_service.py  logger_service.py  path_service.py
src/utils/: file_helpers.py
tests/: model_tests.py  run_tests.py  service_tests.py  util_tests.py
