[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",        # CLI
]

[project.scripts]
lifemgr = "apps.cli.main:app"              # Typer-CLI
lifemgr-console = "apps.console.main:main" # interaktive Console (print/input)

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["apps*", "src*"] # nimmt nur Pakete mit __init__.py auf
