[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12", # CLI
]

[project.scripts]
logger-all-tests = "tests.run_tests:run_tests"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["src*", "tests*"] # nimmt nur Pakete mit __init__.py auf
